--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Juan Vargas | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Juan Vargas | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Juan Vargas at FSYSA conference" width="200">
+        <p>I'm Juan. I'm 23 years old. I lived in Rivera all of my life except for the 2 years I served as a missionary
+            in Argentina Bahía Blanca Mission.</p>
+    </main>
+    <footer>
+        <p>© 2025 | Juan Vargas | Uruguay</p>
+    </footer>
 </body>
+
 </html>
