--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Juan Vargas">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="description" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://scriptures.byu.edu"></a></li>
+            <li><a href="https://www.churchofjesuschrist.org"></a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading1</h2>
+            <p>This is a paragraph</p>
+        </section>
+        <section>
+            <h2>Heading2</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eos? </p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-273999-wallpaper.jpg"
+            alt="Aba, Nigeria Temple" width="200">
+    </aside>
+    <footer>
+        <p>Juan Vargas</p>
+    </footer>
+
+
 </body>
+
 </html>
