Added title to the hyperlinks

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -15,8 +15,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="https://scriptures.byu.edu"></a></li>
-            <li><a href="https://www.churchofjesuschrist.org"></a></li>
+            <li><a href="https://scriptures.byu.edu">Scripture Citation Index</a></li>
+            <li><a href="https://www.churchofjesuschrist.org">The Church's Main Webpage</a></li>
         </ul>
     </nav>
     <main>
