added style to homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan Vargas | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description"
+        content="Juan Vargas' homepage for the WDD 130 course. Mainly used to practice HTML and CSS coding.">
+    <meta name="author" content="Juan Vargas">
 </head>
 
 <body>
@@ -18,9 +21,26 @@
     <main>
         <h1>Juan Vargas | WDD 130</h1>
         <img src="images/profile.jpg" alt="Juan Vargas at FSYSA conference" width="200">
-        <p>I'm Juan. I'm 23 years old. I lived in Rivera all of my life except for the 2 years I served as a missionary
-            in Argentina Bahía Blanca Mission.</p>
+        <p>I'm Juan. I'm 23 years old. I lived in Rivera, Uruguay all of my life except for the 2 years I served as a
+            missionary
+            in the Argentina Bahía Blanca Mission.</p>
     </main>
+    <aside>
+        <h2>Uruguay</h2>
+        <img src="images/uruguay-campeon.jpg" alt="Uruguay's sub-20 soccer team with the world cup">
+        <p>
+            Uruguay is a country of only 3M people, situated on South America between two of the largest countries in
+            the world: Brazil and
+            Argentina. Nonetheless, Uruguay has managed to achieve incredible feats at world level. Most notably
+            Uruguay's national soccer
+            team has won the World Cup 2 times (with other 2 World titles prior) and is also the current champion on the
+            sub-20 category, despite having less population on the whole country than some nearby cities like Buenos
+            Aires.
+            The capital, Montevideo, is at the south of the country, bordering with the Rio de la Plata. It has amazing
+            beaches and many turistic spots.
+            53% of Uruguay's population lives in Montevideo.
+        </p>
+    </aside>
     <footer>
         <p>© 2025 | Juan Vargas | Uruguay</p>
     </footer>
