W03 code-along activity

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
     <main>
@@ -24,10 +26,24 @@
         <p>I'm Juan. I'm 23 years old. I lived in Rivera, Uruguay all of my life except for the 2 years I served as a
             missionary
             in the Argentina Bahía Blanca Mission.</p>
+        <p>I'm currently studying Web and Software development at BYU-Idaho online and working for the Church of Jesus
+            Christ of Latter Day Saints
+            as an administrative assistant for institute.</p>
+        <p>I like playing videogames, listening to music and going out with friends.</p>
+        <p>Other things I like are animals, books, ancient history and the color red!</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple?lang=eng"
+                    target="_blank">Montevideo,
+                    Uruguay Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple?lang=eng"
+                    target="_blank">Campinas, Brazil Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/bahia-blanca-argentina-temple?lang=eng"
+                    target="_blank">Bahía Blanca, Argentina Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Uruguay</h2>
-        <img src="images/uruguay-campeon.jpg" alt="Uruguay's sub-20 soccer team with the world cup">
+        <img src="images/uruguay.jpg" alt="Uruguay's sub-20 soccer team with the world cup">
         <p>
             Uruguay is a country of only 3M people, situated on South America between two of the largest countries in
             the world: Brazil and
