--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting</title>
-    <meta description="White Water Rafting services. Plan your next adventure trip here!">
-    <meta author="Juan Vargas">
+    <meta name="description" content="White Water Rafting services. Plan your next adventure trip here!">
+    <meta name="author" content="Juan Vargas">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -25,7 +25,7 @@
     <main>
         <div class="hero">
             <img src="images/hero-image.jpg" alt="background Rafting image">
-            <h1>Cool White Water Rafting Company</h1>
+            <h1>About Us - Cool White Water Rafting Company</h1>
             <article>
                 <img src="images/happy-clients.jpg" alt="Clients enjoying their trip">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque natus ea, nam iure inventore
