--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting</title>
+    <title>About Us - White Water Rafting</title>
     <meta name="description" content="White Water Rafting services. Plan your next adventure trip here!">
     <meta name="author" content="Juan Vargas">
     <link rel="stylesheet" href="styles/rafting.css">
