--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - White Water Rafting</title>
-    <meta name="description" content="White Water Rafting services. Plan your next adventure trip here!">
+    <title>About Us - Cool White Water Rafting</title>
+    <meta name="description"
+        content="White Water Rafting services from Cool White Water Rafting. Plan your next adventure trip here! A company with 50 years of experience and thousands of happy clients">
     <meta name="author" content="Juan Vargas">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
