--- a/index.html
+++ b/index.html
@@ -20,43 +20,50 @@
             <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Juan Vargas | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Juan Vargas at FSYSA conference" width="200">
-        <p>I'm Juan. I'm 23 years old. I lived in Rivera, Uruguay all of my life except for the 2 years I served as a
-            missionary
-            in the Argentina Bahía Blanca Mission.</p>
-        <p>I'm currently studying Web and Software development at BYU-Idaho online and working for the Church of Jesus
-            Christ of Latter Day Saints
-            as an administrative assistant for institute.</p>
-        <p>I like playing videogames, listening to music and going out with friends.</p>
-        <p>Other things I like are animals, books, ancient history and the color red!</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple?lang=eng"
-                    target="_blank">Montevideo,
-                    Uruguay Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple?lang=eng"
-                    target="_blank">Campinas, Brazil Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/bahia-blanca-argentina-temple?lang=eng"
-                    target="_blank">Bahía Blanca, Argentina Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Uruguay</h2>
-        <img src="images/uruguay.jpg" alt="Uruguay's sub-20 soccer team with the world cup">
-        <p>
-            Uruguay is a country of only 3M people, situated on South America between two of the largest countries in
-            the world: Brazil and
-            Argentina. Nonetheless, Uruguay has managed to achieve incredible feats at world level. Most notably
-            Uruguay's national soccer
-            team has won the World Cup 2 times (with other 2 World titles prior) and is also the current champion on the
-            sub-20 category, despite having less population on the whole country than some nearby cities like Buenos
-            Aires.
-            The capital, Montevideo, is at the south of the country, bordering with the Rio de la Plata. It has amazing
-            beaches and many turistic spots.
-            53% of Uruguay's population lives in Montevideo.
-        </p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Juan Vargas | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Juan Vargas at FSYSA conference" width="200">
+            <p>I'm Juan. I'm 23 years old. I lived in Rivera, Uruguay all of my life except for the 2 years I served as
+                a
+                missionary
+                in the Argentina Bahía Blanca Mission.</p>
+            <p>I'm currently studying Web and Software development at BYU-Idaho online and working for the Church of
+                Jesus
+                Christ of Latter Day Saints
+                as an administrative assistant for institute.</p>
+            <p>I like playing videogames, listening to music and going out with friends.</p>
+            <p>Other things I like are animals, books, ancient history and the color red!</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple?lang=eng"
+                        target="_blank">Montevideo,
+                        Uruguay Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple?lang=eng"
+                        target="_blank">Campinas, Brazil Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/bahia-blanca-argentina-temple?lang=eng"
+                        target="_blank">Bahía Blanca, Argentina Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Uruguay</h2>
+            <img src="images/uruguay.jpg" alt="Uruguay's sub-20 soccer team with the world cup">
+            <p>
+                Uruguay is a country of only 3M people, situated on South America between two of the largest countries
+                in
+                the world: Brazil and
+                Argentina. Nonetheless, Uruguay has managed to achieve incredible feats at world level. Most notably
+                Uruguay's national soccer
+                team has won the World Cup 2 times (with other 2 World titles prior) and is also the current champion on
+                the
+                sub-20 category, despite having less population on the whole country than some nearby cities like Buenos
+                Aires.
+                The capital, Montevideo, is at the south of the country, bordering with the Rio de la Plata. It has
+                amazing
+                beaches and many turistic spots.
+                53% of Uruguay's population lives in Montevideo.
+            </p>
+        </aside>
+    </div>
     <footer>
         <p>© 2025 | Juan Vargas | Uruguay</p>
     </footer>
