--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Cool White Water Rafting</title>
     <meta name="description"
-        content="White Water Rafting services from Cool White Water Rafting. Plan your next adventure trip here! A company with 50 years of experience and thousands of happy clients">
+        content="Plan your next adventure trip here! A company with 50 years of experience and thousands of happy clients">
     <meta name="author" content="Juan Vargas">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
