--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="Logo">
+        <img src="images/logo.png" alt="Cool White Water Rafting Logo">
         <nav>
-            <ul>
+            <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero-image.jpg" alt="background Rafting image">
+            <img src="images/hero-image.jpg" alt="Trip through Sidon River">
             <h1>About Us - Cool White Water Rafting Company</h1>
             <article>
                 <img src="images/happy-clients.jpg" alt="Clients enjoying their trip">
@@ -34,14 +34,40 @@
                     ipsa veniam dolorem sed, eligendi dignissimos!</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At laudantium ex ullam, inventore suscipit
+            <p class="left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At laudantium ex ullam, inventore
+                suscipit
+                odio ipsa nemo earum saepe, tempora libero et, amet atque ab excepturi blanditiis asperiores
+                possimus consequuntur.</p>
+            <img src="images/history.jpg" alt="Helmets resting on a raft">
+            <p class="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At laudantium ex ullam, inventore
+                suscipit
                 odio ipsa nemo earum saepe, tempora libero et, amet atque ab excepturi blanditiis asperiores
                 possimus consequuntur.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/day-long-trip.jpg" alt="Day-long trip">
+                <figcaption>Day-long trip</figcaption>
+            </figure>
+            <figure>
+                <img src="images/2-hour-trip.jpg" alt="2 hour trip">
+                <figcaption>2 hour trip</figcaption>
+            </figure>
+            <figure>
+                <img src="images/family-trip.jpg" alt="Family Trip">
+                <figcaption>Family Trip</figcaption>
+            </figure>
+            <figure>
+                <img src="images/sidon-river.jpg" alt="Sidon River">
+                <figcaption>The "Sidon River"</figcaption>
+            </figure>
+            <figure>
+                <img src="images/no-mans-land.jpg" alt="No Man's land">
+                <figcaption>No Man's Land</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
