Updated for audit w05

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -72,8 +72,8 @@
                         </div>
 
                         <label for="message" class="fullspan">Message</label>
-                        <textarea type="text" id="message" name="message"
-                            placeholder="Put more Peter Breinholt pictures :)" class="fullspan"></textarea>
+                        <textarea id="message" name="message" rows="6"
+                            placeholder="Post more Peter Breinholt pictures :)" class="fullspan"></textarea>
 
                         <label for="newsletter" class="fullspan">
                             <input type="checkbox" id="newsletter" name="nesletter">Please
