--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,24 +52,25 @@
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" placeholder="awesomeemail@company.com">
 
+                        <fieldset class="fullspan">
+                            <legend>Message Purpose</legend>
+                            <div class="radioSpan">
 
-                        <legend>Message Purpose</legend>
-                        <div class="radioSpan">
-
-                            <label for="general"> <input type="radio" id="general" name="purpose"
-                                    value="general-inquiry" checked>
-                                General Inquiry</label>
-
-
-                            <label for="reservation">
-                                <input type="radio" id="reservation" name="purpose" value="reservation-question">
-                                Reservation Question</label>
+                                <label for="general"> <input type="radio" id="general" name="purpose"
+                                        value="general-inquiry" checked>
+                                    General Inquiry</label>
 
 
-                            <label for="website"> <input type="radio" id="website" name="purpose"
-                                    value="website-suggestion">
-                                Website Suggestion</label>
-                        </div>
+                                <label for="reservation">
+                                    <input type="radio" id="reservation" name="purpose" value="reservation-question">
+                                    Reservation Question</label>
+
+
+                                <label for="website"> <input type="radio" id="website" name="purpose"
+                                        value="website-suggestion">
+                                    Website Suggestion</label>
+                            </div>
+                        </fieldset>
 
                         <label for="message" class="fullspan">Message</label>
                         <textarea id="message" name="message" rows="6"
