w06 trips page start

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Cool White Water Rafting</title>
     <meta name="description"
-        content="Plan your next adventure trip here! A company with 50 years of experience and thousands of happy clients">
+        content="Purpose and History of Cool White Water Rafting. A company with 50 years of experience and thousands of happy clients. Exciting, trustworthy and guided by certified experts.">
     <meta name="author" content="Juan Vargas">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
