--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="trips-title">
             <h1>Cool White Water Rafting Trips</h1>
             <p>Come rafting with the #1 world river rafting with over 50 years experience! We offer the best selection
                 of top-notch whitewater rafting trips on the world's best rivers. Whether you are first-timers,
@@ -33,19 +33,20 @@
                 our industry
                 leading Cancellation Policy.</p>
         </section>
-        <section>
-            <img src="images/hero_transparency.webp" alt="Sidon River trip">
+        <section class="popular">
+            <img src="images/hero_transparency.webp" alt="Sidon River trip" class="popular-big">
             <h2>Our Most Popular Trips:</h2>
             <figure>
-                <img src="images/sidon-river.jpg" alt="Sidon River">
+                <img src="images/sidon-river.jpg" alt="Sidon River" class="popular-small">
                 <figcaption>Sidon River</figcaption>
                 <p><b>Difficulty: </b>Begginers</p>
                 <p><b>Duration: </b>3 hours</p>
-                <p>By far the most popular trip for families! Kids love it and parents can relax and enjoy the exciting
+                <p>By far the most popular trip for everyone! Kids love it and parents get to relax and enjoy the
+                    exciting
                     journey!</p>
             </figure>
             <figure>
-                <img src="images/day-long-trip.jpg" alt="day-long-trip">
+                <img src="images/day-long-trip.jpg" alt="day-long-trip" class="popular-small">
                 <figcaption>Day-long Trip</figcaption>
                 <p><b>Difficulty: </b>Intermediate</p>
                 <p><b>Duration: </b>1 day</p>
@@ -54,7 +55,7 @@
                     camping.</p>
             </figure>
             <figure>
-                <img src="images/no-mans-land.jpg" alt="No-man's Land">
+                <img src="images/no-mans-land.jpg" alt="No-man's Land" class="popular-small">
                 <figcaption>No-Man's Land</figcaption>
                 <p><b>Difficulty: </b>Advanced</p>
                 <p><b>Duration: </b>3 hours / 1 day / 2 days</p>
@@ -62,34 +63,67 @@
                     Land! Filled with action from beggining to end, this is the adventure you're looking for!</p>
             </figure>
         </section>
-        <table>
-            <tr>
-                <h>Trip Name</h>
-                <th>Difficulty</th>
-                <th>Duration</th>
-                <th>Price</th>
-                <th>Equipment</th>
-                <th>Other</th>
-                <th>Availability</th>
-            </tr>
-            <tr>
-                <td>Sidon River</td>
-            </tr>
-            <tr>
-                <td>Day-long Trip</td>
-            </tr>
-            <tr>
-                <td>No-Man's Land</td>
-            </tr>
-            <tr>
-                <td>Family Trip</td>
-            </tr>
-            <tr>
-                <td>2 Hour Trip</td>
-            </tr>
+        <table class="table-trips">
+            <thead>
+                <tr>
+                    <th>Trip Name</th>
+                    <th>Difficulty</th>
+                    <th>Duration</th>
+                    <th>Price</th>
+                    <th>Includes</th>
+                    <th>Availability</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><b>Sidon River</b></td>
+                    <td>Begginers</td>
+                    <td>3 hours</td>
+                    <td>US$20.00 per person</td>
+                    <td>Basic rafting equipment, breakfast, 2 stops.</td>
+                    <td>Summer Season (with 2 weeks notice).</td>
+
+                </tr>
+                <tr>
+                    <td><b>Day-long Trip</b></td>
+                    <td>Intermediate</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+
+                </tr>
+                <tr>
+                    <td><b>No-Man's Land</b></td>
+                    <td>Advanced</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+
+                </tr>
+                <tr>
+                    <td><b>Family Trip</b></td>
+                    <td>Begginers</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+
+
+                </tr>
+                <tr>
+                    <td><b>2 Hour Trip</b></td>
+                    <td>Intermediate</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                </tr>
+            </tbody>
         </table>
-        <section>
-            <h2>Ready to plan your next trip? Need more information? Get in contact with us!</h2>
+        <section class="contact-button">
+            <h2>Ready to plan your next trip? Need more information? Got suggestions? Reach out to us!</h2>
             <a href="https://juanvargasllaguno.github.io/wdd130/wwr/contact.html">Contact Us</a>
         </section>
     </main>
