Fixed errors for submission

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -115,7 +115,7 @@
                 <img src="images/tiktok.png" alt="TikTok">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="images/instagram.webp" alt="Instagram">
             </a>
         </nav>
     </footer>
