--- a/wwr/about.html
+++ b/wwr/about.html
@@ -80,7 +80,7 @@
                 <img src="images/tiktok.png" alt="TikTok">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="images/instagram.webp" alt="Instagram">
             </a>
         </nav>
     </footer>
