--- a/wwr/index.html
+++ b/wwr/index.html
@@ -36,17 +36,17 @@
         <section class="small-icons">
             <figure>
                 <img src="images/rivers.jpg" alt="People embarking on a trip through the river" class="mid-image">
-                <img src="images/river-icon.png" alt="minimalist river icon" class="icon">
+                <img src="images/river-icon.jpg" alt="minimalist river icon" class="icon">
                 <figcaption>Rivers</figcaption>
             </figure>
             <figure>
                 <img src="images/camping.jpg" alt="A family camping by the river" class="mid-image">
-                <img src="images/camping-icon.png" alt="minimalist camping icon" class="icon">
+                <img src="images/camping-icon.jpg" alt="minimalist camping icon" class="icon">
                 <figcaption>Camping</figcaption>
             </figure>
             <figure>
                 <img src="images/rapids.jpg" alt="A group going down the rapids" class="mid-image">
-                <img src="images/rapids-icon.png" alt="minimalist rapids icon" class="icon">
+                <img src="images/rapids-icon.jpg" alt="minimalist rapids icon" class="icon">
                 <figcaption>Rapids</figcaption>
             </figure>
         </section>
@@ -66,7 +66,6 @@
                 <button type="submit">Sign Up</button>
             </form>
         </div>
-        </section>
 
     </main>
     <footer>
@@ -79,7 +78,7 @@
                 <img src="images/tiktok.png" alt="TikTok">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="images/instagram.webp" alt="Instagram">
             </a>
         </nav>
     </footer>
